fix: overflow

--- a/layout/styles/_globals.scss
+++ b/layout/styles/_globals.scss
@@ -1,6 +1,6 @@
 @import "./variables.scss";
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 html,
 body {
@@ -12,6 +12,7 @@ body {
     background-color: gainsboro;
     color: $clr-base;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 a {
